# gssp-docs

./: .gitignore  Lora resources.md  README.md  purchase recommendation.odt
balloon_launch_logs/: LOG6  log1  log2  log3
command_center/: pubspec.yaml
command_center/lib/: data_model.dart  homepage.dart  main.dart  map.dart  styles.dart
command_center/linux/: CMakeLists.txt  my_application.cc
command_center/test/: widget_test.dart
command_center/windows/: CMakeLists.txt
command_center/windows/runner/: Runner.rc
datasheets/: fspl.py
resources/: intro.md
src/: data.txt  map.html  microp.py  path_loss.py  plot.py  save_serial.py  test.txt
src/TEST-1/: New Text Document (2).txt  New Text Document.txt  rssi.py  t2.txt
src/pico_code/: CMakeLists.txt  pico_code.c
src/sketch_nov29a/: sketch_nov29a.ino
src/test_logs/: devttyACM0_2023_07_08.02.36.42.388.txt  devttyUSB0_2023_07_02.18.14.45.264.txt  devttyUSB0_2023_07_02.18.25.53.577.txt  devttyUSB0_2023_07_05.18.26.16.345.txt  devttyUSB0_2023_07_05.18.39.33.561.txt  devttyUSB0_2023_07_06.17.04.59.309.txt  devttyUSB0_2023_07_06.17.43.25.464.txt  devttyUSB0_2023_07_06.17.47.21.486.txt  devttyUSB0_2023_07_06.18.49.26.242.txt  devttyUSB0_2023_07_08.13.26.28.826.txt  devttyUSB0_2023_07_08.13.42.37.155.txt  devttyUSB0_2023_07_08.14.07.07.821.txt  devttyUSB0_2023_07_08.14.11.59.544.txt  devttyUSB0_2023_07_08.14.12.09.013.txt  devttyUSB0_2023_07_08.14.13.43.265.txt  devttyUSB0_2023_07_08.14.14.17.135.txt  devttyUSB0_2023_07_08.15.10.59.628.txt  devttyUSB0_2023_07_08.15.12.09.585.txt
